# wafl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build_and_run_tests.yml
include/wafl/: sort_two_vectors.hpp  wafl.hpp
src/: wafl.cpp
tests/: CMakeLists.txt  tests.cpp
